--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <aside classlist.if="$globals.isMenuOpen ==  true? 'open'" click.setvalue="$globals.isMenuOpen = !$globals.isMenuOpen">
             <nav id="main-menu" aria-label="main menu">
                 <ul>
-                    <li><a href="/welcome">Welcome</a></li>
+                    <li><a href="/simple_schema">Simple Schema</a></li>
                     <li><a href="/about">About</a></li>
                 </ul>
             </nav>
