--- a/app/simple_schema/simple_schema.html
+++ b/app/simple_schema/simple_schema.html
@@ -5,6 +5,8 @@
     <combo-box value.bind="view">
         <li data-value="view1">View 1</li>
         <li data-value="view2">View 2</li>
+        <li data-value="template">Template</li>
+        <li data-value="variables">Variables</li>
     </combo-box>
 </label>
 
