--- a/app/simple_schema/simple_schema.html
+++ b/app/simple_schema/simple_schema.html
@@ -7,6 +7,8 @@
         <li data-value="view2">View 2</li>
         <li data-value="template">Template</li>
         <li data-value="variables">Variables</li>
+        <li data-value="list">List - Custom Manager and Provider</li>
+        <li data-value="greetings">Greeting - Custom Value Process Manager</li>
     </combo-box>
 </label>
 
